# vala_lib_template

./: README.md  basicgobj.vala  meson.build  test.py
